--- a/responsiveWebDesign/1_2CafeMenu.html
+++ b/responsiveWebDesign/1_2CafeMenu.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cafe Menu</title>
-    <link href="2_CafeMenu.css" rel="stylesheet"/>
+    <link href="1_2CafeMenu.css" rel="stylesheet"/>
   </head>
   <body>
     <div class="menu">
