--- a/responsiveWebDesign/1_4RegistrationForm.html
+++ b/responsiveWebDesign/1_4RegistrationForm.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Registration Form</title>
-    <link rel="stylesheet" href="4_registrationForm.css" />
+    <link rel="stylesheet" href="1_4RegistrationForm.css" />
   </head>
   <body>
     <h1>Registration Form</h1>
