--- a/JavaScriptAlgorithmsAndDataStructures/1_7MusicPlayer/1_7MusicPlayer.html
+++ b/JavaScriptAlgorithmsAndDataStructures/1_7MusicPlayer/1_7MusicPlayer.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="1_7MusicPlayer.css" />
     <title>
       Learn Basic String and Array Methods by Building a Music Player App
     </title>
@@ -115,6 +115,6 @@
         <ul id="playlist-songs"></ul>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="1_7MusicPlayer.js"></script>
   </body>
 </html>
