--- a/JavaScriptAlgorithmsAndDataStructures/1PalindromeChecker/index.html
+++ b/JavaScriptAlgorithmsAndDataStructures/1PalindromeChecker/index.html
@@ -3,19 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./styles.css">
         <title>Palindrome Checker</title>
     </head>
     <body>
-        <main>
-            <h1>Is it a Palindrome?</h1>
-            <div class="palindrome-checker">
-                <label for="text-input">Enter text to check for a palindrome:</label>
-                <input class="palindrome-input" id="text-input" type="text">
-                <button class="palindrome-btn" id="check-btn">Check</button>
-                <div class="result hidden" id="result">the</div>
-            </div>
-        </main>
+        <h1>Is it a Palindrome?</h1>
+        <div class="palindrome-checker">
+            <label for="text-input">Enter text to check for a palindrome:</label>
+            <input class="text-input" id="text-input" type="text">
+            <button class="check-btn" id="check-btn">Check</button>
+            <div class="result hidden" id="result"></div>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
