--- a/JavaScriptAlgorithmsAndDataStructures/2RomanNumeralConverter/index.html
+++ b/JavaScriptAlgorithmsAndDataStructures/2RomanNumeralConverter/index.html
@@ -10,10 +10,10 @@
         <h1>Roman Numeral Converter</h1>
         <div class="converter">
             <label for="number">Enter a number:</label>
-            <input type="number" id="number">
-            <button id="convert-btn">Convert</button>
-            <div id="output"></div>
-            </div>
-        <script src="script.js"></script>
+            <input class="number" id="number" type="number">
+            <button class="convert-btn" id="convert-btn">Convert</button>
+            <div class="output hidden" id="output"></div>
+        </div>
+        <script src="./script.js"></script>
     </body>
 </html>
