--- a/JavaScriptAlgorithmsAndDataStructures/3TelephoneNumberValidator/index.html
+++ b/JavaScriptAlgorithmsAndDataStructures/3TelephoneNumberValidator/index.html
@@ -3,20 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./styles.css">
         <title>Telephone Number Validator</title>
     </head>
     <body>
         <h1>Telephone Number Validator</h1>
-        <section class="input-container">
+        <div class="validator">
+            <div class="phone-header"></div>
             <label for="user-input">Enter a phone number:</label>
-            <input id="user-input">
-            <button id="check-btn">Check</button>
-            <button id="clear-btn">Clear</button>
-        </section>
-        <section class="output-container">
-            <div id="results-div" for="user-input"></output>
-        </section>
-        <script src="script.js"></script>
+            <input class="user-input" id="user-input" type="text">
+            <div id="results-div" for="user-input"></div>
+            <span>
+                <button id="check-btn">Check</button>
+                <button id="clear-btn">Clear</button>
+            </span>
+        </div>
+        <script src="./script.js"></script>
     </body>
 </html>
