Cash Register CSS Update

--- a/JavaScriptAlgorithmsAndDataStructures/4CashRegister/index.html
+++ b/JavaScriptAlgorithmsAndDataStructures/4CashRegister/index.html
@@ -7,15 +7,13 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <main>
-        <div id="change-due"></div>
-        <div id="input-div">
-            <label for="cash">Enter Cash From Customer</label>
-            <input id="cash">
-            <button id="purchase-btn">Purchase</button>
-        </div>
-        <div id="in-drawer"></div>
-    </main>
+    <div class="change-due hidden" id="change-due"></div>
+    <div class="input-div" id="input-div">
+        <label for="cash">Enter Cash From Customer</label>
+        <input id="cash">
+        <button id="purchase-btn">Purchase</button>
+    </div>
+    <div id="in-drawer"></div>
     <script src="./script.js"></script>
   </body>
 </html>
