--- a/responsiveWebDesign/5PersonalPortfolio/index.html
+++ b/responsiveWebDesign/5PersonalPortfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="5PersonalPortfolio.css" />
+        <link rel="stylesheet" href="styles.css" />
         <title>Portfolio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
