--- a/frontEndDevelopmentLibraries/Projects/3DrumMachine/index.html
+++ b/frontEndDevelopmentLibraries/Projects/3DrumMachine/index.html
@@ -8,20 +8,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div id="drum-machine">
-      <div id="pad-bank">
-        <button class="drum-pad" id="Q-div">Q<audio class="clip" src="https://cdn.freecodecamp.org/testable-projects-fcc/audio/Heater-1.mp3" id="Q"></audio></button>
-        <button class="drum-pad" id="W-div">W<audio class="clip" src="https://cdn.freecodecamp.org/testable-projects-fcc/audio/Heater-2.mp3" id="W"></audio></button>
-        <button class="drum-pad" id="E-div">E<audio class="clip" src="https://cdn.freecodecamp.org/testable-projects-fcc/audio/Heater-3.mp3" id="E"></audio></button>
-        <button class="drum-pad" id="A-div">A<audio class="clip" src="https://cdn.freecodecamp.org/testable-projects-fcc/audio/Heater-4_1.mp3" id="A"></audio></button>
-        <button class="drum-pad" id="S-div">S<audio class="clip" src="https://cdn.freecodecamp.org/testable-projects-fcc/audio/Heater-6.mp3" id="S"></audio></button>
-        <button class="drum-pad" id="D-div">D<audio class="clip" src="https://cdn.freecodecamp.org/testable-projects-fcc/audio/Dsc_Oh.mp3" id="D"></audio></button>
-        <button class="drum-pad" id="Z-div">Z<audio class="clip" src="https://cdn.freecodecamp.org/testable-projects-fcc/audio/Kick_n_Hat.mp3" id="Z"></audio></button>
-        <button class="drum-pad" id="X-div">X<audio class="clip" src="https://cdn.freecodecamp.org/testable-projects-fcc/audio/RP4_KICK_1.mp3" id="X"></audio></button>
-        <button class="drum-pad" id="C-div">C<audio class="clip" src="https://cdn.freecodecamp.org/testable-projects-fcc/audio/Cev_H2.mp3" id="C"></audio></button>
-      </div>
-      <p id="display"></p>
-    </div>
+    <div id="container"></div>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
