--- a/frontEndDevelopmentLibraries/Projects/4Calculator/index.html
+++ b/frontEndDevelopmentLibraries/Projects/4Calculator/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    
+    <div id="container"></div>
   </body>
+  <script src="./script.js"></script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
