--- a/frontEndDevelopmentLibraries/Projects/5Clock/index.html
+++ b/frontEndDevelopmentLibraries/Projects/5Clock/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
+    <title>25+5</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    
+    <div id="app"></div>
+    <audio id="beep" preload="auto" src="https://cdn.freecodecamp.org/testable-projects-fcc/audio/BeepSound.wav">
   </body>
 </html>
